--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-router": "^3.0.0",
+    "socket.io-client": "^1.5.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "run": "npm run build && npm start",
+    "start": "cd server; node server",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
