--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^3.0.0",
+    "react-toggle-switch": "^2.1.2",
     "socket.io-client": "^1.5.1"
   },
   "scripts": {
