--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,9 @@
     "express-session": "^1.12.1",
     "jsonfile": "^2.2.3",
     "net": "^1.0.2",
+    "node-async-loop": "^1.2.2",
     "node-schedule": "^0.6.0",
+    "promise": "^7.1.1",
     "socket.io": "^1.3.7",
     "socketio-wildcard": "^0.3.0",
     "underscore": "^1.8.3"
