--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "react-dom": "^15.3.2",
     "react-loading": "0.0.9",
     "react-router": "^3.0.0",
-    "react-toggle-switch": "^2.1.2",
     "socket.io-client": "^1.5.1"
   },
   "scripts": {
-    "run": "npm run build && npm start",
+    "run": "sass src/m.sass src/Arduinode.css && npm run build && npm start",
     "start": "cd server; node server",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
