--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^15.3.2",
     "react-loading": "0.0.9",
     "react-router": "^3.0.0",
+    "react-toggle-switch": "^2.1.2",
     "socket.io-client": "^1.5.1"
   },
   "scripts": {
